adjust card-img-top minimum height and minimum width to avoid bootstrap card images from being too wide in wide mobile screens, remove duplicate .card-img-top style declaration causing conflict, change object-fit property value from cover to fill for card-img-top.

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,8 @@ footer {
 }
 
 .card {
-    width: 100%;
+    width: 19rem;/*card width matches the content width*/
+    height: 18rem;
 }
 
 .col-md-6 .card {
@@ -136,8 +137,8 @@ footer {
 }
 
 .card-img-top {
-    max-height: 240px;
-    min-height: 90px;
+    min-height: 6em;
+    min-width: 7em;
     object-fit: cover;
 }
 
@@ -177,10 +178,6 @@ footer {
 
 .play-sound {
     margin-left: 30px;
-}
-
-.card-img-top {
-    object-fit: fill;
 }
 
 button[type=submit] {
